main: Upgraded to Google Cloud Storage Changed from local storage to google cloud storage and few other changes.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ flask
 python-dotenv
 waitress
 gunicorn
+google-cloud-storage
 langchain
 langchain-huggingface
 langchain-community
+langchain-google-community[gcs]
 pypdf
 pyjwt
 faiss-cpu
